 * Parallaxes now move the player again
 * Fixed an issue with logic virus warnings appearing when peeking into a logic block
 * Power split notifications now work with SHIFT + Z
 * Fixed bridge clicking and dragging not linking with nearby bridges
 * Added some additional icons to :emote: autocomplete 
 * Improved logic virus detection
 TODO: Finish me

# Version 6.5.3
 * Changed icons for encrypted and verified messages
 * Fixed a bug in buildpath
 * Fixed discord rich presence not starting on client launch when not on steam
 * Fixed logic virus warnings being incredibly spammy
 * Removed virus removal messages, those were just annoying
 * A !js command was added an update or two ago but I forgot to list it in the changelog

# Version 6.5.2
 * Fix hints consuming click, even when invisible
 * Fix green verified messages
 * Auto bridge doesn't bridge over blocks in the transportation category (aside from plast conveyors)

# Version 6.5.1
 * Fix a crash related to chatting in singleplayer
 * Fix a setting missing from the settings menu
 * Blocks placed/interacted with by ai will appear in [lightgray]light gray[]
 * Player names no longer have color in placement logs and warnings
 * Fixed build path moving back and forth constantly when nothing is affordable
 * Navigation backtracking fixed properly this time, hopefully this wont cause issues
 * Reworked hints, they should be more reliable and not overlap ever
 * Fixed an issue that caused encrypted messages to break after 50 of them were sent (the message verification is still broken)
 * Fixed an issue with placing cores
 * Added a debug setting that just prints more stuff to the console

# Version 6.5.0
 * Navigation should actually find the shortest path every time now
 * Navigation will properly avoid turrets (they may still shoot at you once in a while but that should be pretty rare)
 * Navigation will try not to kill your entire formation (for whatever reason, this doesn't slow you down on servers)