@@ -14,6 +14,7 @@ client.toggleturrets = [accent][{0}][] to toggle turret visibility
 client.toggleblocks = [accent][{0}][] to toggle block visibility
 client.stopsendbuildplans = [accent][[{0}][] to stop dispatching build plans
 client.sendbuildplans = [accent][[{0}][] to start dispatching build plans
+client.largeschematic = [accent][[{0}][] to avoid automatic deselection of large schematic
 
 credits.text = Created by [royal]Anuken[] - [sky]anukendev@gmail.com[]
 credits = Credits
